MFC r317370: Change ctl_free_lun() locking.

This fixes potential callout_drain() sleep under non-sleepable lock.

PR:		218167